--- a/Source_Code/.godot/global_script_class_cache.cfg
+++ b/Source_Code/.godot/global_script_class_cache.cfg
@@ -1,7 +1,1 @@
-list=Array[Dictionary]([{
-"base": &"Node",
-"class": &"UUID",
-"icon": "",
-"language": &"GDScript",
-"path": "res://addons/copilot/UUID.gd"
-}])
+list=Array[Dictionary]([])
